<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/buyNowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_now_pay_later"
        style="@style/Headline2"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <com.tpay.sdk.designSystem.textfields.TextFieldStandard
        android:id="@+id/nameSurnameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:textFieldHint="@string/payer_data_name_surname_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/buyNowText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.tpay.sdk.designSystem.textfields.TextFieldEmail
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:textFieldHint="@string/payer_data_email_hint"
        app:layout_constraintTop_toBottomOf="@id/nameSurnameTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.tpay.sdk.designSystem.textfields.TextFieldStandard
        android:id="@+id/addressTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:textFieldHint="@string/enter_address"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/postalAndCityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/addressTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.tpay.sdk.designSystem.textfields.TextFieldPostalCode
            android:id="@+id/postalCodeTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            app:textFieldHint="@string/postal_code"/>

        <com.tpay.sdk.designSystem.textfields.TextFieldStandard
            android:id="@+id/cityTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="4dp"
            app:textFieldHint="@string/city"/>

    </LinearLayout>

    <com.tpay.sdk.designSystem.textfields.TextFieldStandard
        android:id="@+id/countryTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:textFieldHint="@string/poland"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postalAndCityLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>