<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tpay.sdk.designSystem.buttons.ButtonSecondary
        android:id="@+id/enableNfcBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:tpayButtonIcon="@drawable/ic_chevron_left"
        app:buttonText="@string/go_back"
        app:iconPosition="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/credit_card_scan_background"
        app:layout_constraintTop_toBottomOf="@id/enableNfcBackButton">

        <ImageView
            android:id="@+id/enableNfcIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_nfc_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enableNfcTextView"
            style="@style/Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enable_nfc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enableNfcIcon" />

        <TextView
            android:id="@+id/enableNfcInSettingsTextView"
            style="@style/BodyTextSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="34dp"
            android:gravity="center"
            android:text="@string/enable_nfc_in_settings"
            app:layout_constraintTop_toBottomOf="@id/enableNfcTextView" />

        <com.tpay.sdk.designSystem.buttons.ButtonLink
            android:id="@+id/enableNfcSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"
            app:buttonText="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enableNfcInSettingsTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>