<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tpay.sdk.designSystem.buttons.ButtonSecondary
        android:id="@+id/blikBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:tpayButtonIcon="@drawable/ic_chevron_left"
        app:buttonText="@string/go_back"
        app:iconPosition="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tpay.sdk.designSystem.textfields.TextFieldBlikCode
        android:id="@+id/blikTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/blikBackButton"
        app:textFieldHint="@string/blik_code_hint" />

    <LinearLayout
        android:id="@+id/saveBlikLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/blikTextField">

        <TextView
            android:id="@+id/saveBlikText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/BodyTextSmall"
            android:layout_weight="1"
            android:text="@string/save_blik_alias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blikTextField"
            app:layout_constraintEnd_toStartOf="@id/saveBlikCheckbox"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/saveBlikCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_marginStart="16dp"
            app:buttonCompat="@drawable/checkbox_states" />

    </LinearLayout>

    <com.tpay.sdk.designSystem.textfields.TextFieldStandard
        android:id="@+id/saveBlikTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:textFieldHint="@string/name_the_store"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/saveBlikLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
