<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/errorIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/image_content_description"
            android:paddingTop="2dp"
            android:src="@drawable/ic_error_small"
            android:visibility="gone" />

        <TextView
            android:id="@+id/selectCardText"
            style="@style/Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_pay_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.tpay.sdk.designSystem.buttons.ButtonSecondary
        android:id="@+id/addCardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:buttonText="@string/add_card"
        app:iconPosition="end"
        app:tpayButtonIcon="@drawable/ic_add"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payCardRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/addCardButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>